--- a/src/main/resources/assets/alis_bean_mod/lang/en_us.json
+++ b/src/main/resources/assets/alis_bean_mod/lang/en_us.json
@@ -1,13 +1,18 @@
 {
 	"item.alis_bean_mod.steel_ingot": "Steel Ingot",
-	"item.alis_bean_mod.special_item": "Special Item",
+	"item.alis_bean_mod.tin_can": "Tin Can",
 	
-	"item.alis_bean_mod.baked_beans_can": "Can of Baked Beans",
+	"item.alis_bean_mod.can_of_baked_beans": "Can of Baked Beans",
+	"item.alis_bean_mod.haricot_beans": "Haricot Beans",
+	
+	"item.alis_bean_mod.bowl_of_haricot_beans": "Bowl of Haricot Beans",
+	"item.alis_bean_mod.boiling_bowl_of_haricot_beans": "Boiling Bowl of Haricot Beans",
+	"item.alis_bean_mod.bean_juice": "Bowl of Bean Juice",
 	
 	"block.alis_bean_mod.steel_block": "Block of Steel",
 	"block.alis_bean_mod.lamp": "Ali's Lamp",
 	
 	"itemGroup.bean_mod_tab": "Ali's Bean Mod",
 	
-	"tooltip.special_item.hold_shift": "Hold SHIFT for more information"
+	"tooltip.special_item.hold_shift": "Hold [SHIFT] for more information"
 }
