--- a/src/main/resources/assets/alis_bean_mod/lang/en_us.json
+++ b/src/main/resources/assets/alis_bean_mod/lang/en_us.json
@@ -12,6 +12,7 @@
 	"block.alis_bean_mod.steel_block": "Block of Steel",
 	"block.alis_bean_mod.lamp": "Ali's Lamp",
 	"block.alis_bean_mod.haricot_bean_crop": "Haricot Bean Crop",
+	"block.alis_bean_mod.tin_ore": "Tin Ore",
 	
 	"itemGroup.bean_mod_tab": "Ali's Bean Mod",
 	
