--- a/src/main/resources/assets/alis_bean_mod/lang/en_us.json
+++ b/src/main/resources/assets/alis_bean_mod/lang/en_us.json
@@ -19,6 +19,7 @@
 	"block.alis_bean_mod.steel_block": "Block of Steel",
 	"block.alis_bean_mod.tin_block": "Block of Tin",
 	"block.alis_bean_mod.tin_ore": "Tin Ore",
+	"block.alis_bean_mod.canning_machine": "Canning Machine",
 	
 	"itemGroup.bean_mod_tab": "Ali's Bean Mod"
 }
