Clean up and other random tweaks
- Cleaned up package hierarchy (I expect to keep tweaking that)
- Removed unused stuff
- Made separate file for creative tab class instead of it being in the main mod class
- Added loot table for canning machine (doesn't drop items inside it yet though)

--- a/src/main/resources/assets/alis_bean_mod/lang/en_us.json
+++ b/src/main/resources/assets/alis_bean_mod/lang/en_us.json
@@ -19,7 +19,8 @@
 	"block.alis_bean_mod.steel_block": "Block of Steel",
 	"block.alis_bean_mod.tin_block": "Block of Tin",
 	"block.alis_bean_mod.tin_ore": "Tin Ore",
+	
 	"block.alis_bean_mod.canning_machine": "Canning Machine",
 	
-	"itemGroup.bean_mod_tab": "Ali's Bean Mod"
+	"itemGroup.bean_mod_creative_tab": "Ali's Bean Mod"
 }
