--- a/src/main/resources/assets/alis_bean_mod/lang/en_us.json
+++ b/src/main/resources/assets/alis_bean_mod/lang/en_us.json
@@ -22,5 +22,7 @@
 	
 	"block.alis_bean_mod.canning_machine": "Canning Machine",
 	
+	"screen.alis_bean_mod.canning_machine": "Canning Machine",
+	
 	"itemGroup.bean_mod_creative_tab": "Ali's Bean Mod"
 }
